syntax = "proto3";
package flyteidl.artifact;

option go_package = "github.com/flyteorg/flyte/flyteidl/gen/pb-go/flyteidl/artifact";

import "google/protobuf/any.proto";
import "google/api/annotations.proto";

import "flyteidl/admin/launch_plan.proto";
import "flyteidl/core/literals.proto";
import "flyteidl/core/types.proto";
import "flyteidl/core/identifier.proto";
import "flyteidl/core/artifact_id.proto";
import "flyteidl/core/interface.proto";
import "flyteidl/event/cloudevents.proto";


message Artifact {
  core.ArtifactID artifact_id = 1;

  ArtifactSpec spec = 2;

  // references the tag field in ArtifactTag
  repeated string tags = 3;

  ArtifactSource source = 4;
}

message CreateArtifactRequest {
  // Specify just project/domain on creation
  core.ArtifactKey artifact_key = 1;

  string version = 3;

  ArtifactSpec spec = 2;

  map<string, string> partitions = 4;

  string tag = 5;

  ArtifactSource source = 6;
}

message ArtifactSource {
  core.WorkflowExecutionIdentifier workflow_execution = 1;
  string node_id = 2;
  core.Identifier task_id = 3;
  uint32 retry_attempt = 4;

  // Uploads, either from the UI or from the CLI, or FlyteRemote, will have this.
  string principal = 5;
}

message ArtifactSpec {
  core.Literal value = 1;

  // This type will not form part of the artifact key, so for user-named artifacts, if the user changes the type, but
  // forgets to change the name, that is okay. And the reason why this is a separate field is because adding the
  // type to all Literals is a lot of work.
  core.LiteralType type = 2;

  string short_description = 3;

  // Additional user metadata
  google.protobuf.Any user_metadata = 4;

  string metadata_type = 5;
}


message CreateArtifactResponse {
  Artifact artifact = 1;
}

message GetArtifactRequest {
  core.ArtifactQuery query = 1;

  // If false, then long_description is not returned.
  bool details = 2;
}

message GetArtifactResponse {
  Artifact artifact = 1;
}

message SearchOptions {
  // If true, this means a strict partition search. meaning if you don't specify the partition
  // field, that will mean, non-partitioned, rather than any partition.
  bool strict_partitions = 1;

  // If true, only one artifact per key will be returned. It will be the latest one by creation time.
  bool latest_by_key = 2;
}

message SearchArtifactsRequest {
  core.ArtifactKey artifact_key = 1;

  core.Partitions partitions = 2;

  string principal = 3;
  string version = 4;

  SearchOptions options = 5;

  string token = 6;
  int32 limit = 7;
}

message SearchArtifactsResponse {
  // If artifact specs are not requested, the resultant artifacts may be empty.
  repeated Artifact artifacts = 1;

  // continuation token if relevant.
  string token = 2;
}

message FindByWorkflowExecRequest {
  core.WorkflowExecutionIdentifier exec_id = 1;

  enum Direction {
    INPUTS = 0;
    OUTPUTS = 1;
  }

  Direction direction = 2;
}

// Aliases identify a particular version of an artifact. They are different than tags in that they
// have to be unique for a given artifact project/domain/name. That is, for a given project/domain/name/kind,
// at most one version can have any given value at any point.
message AddTagRequest {
  core.ArtifactID artifact_id = 1;

  string value = 2;

  // If true, and another version already has the specified kind/value, set this version instead
  bool overwrite = 3;
}

message AddTagResponse {}

message CreateTriggerRequest {
  admin.LaunchPlan trigger_launch_plan = 1;
}

message CreateTriggerResponse {}

message DeleteTriggerRequest {
  core.Identifier trigger_id = 1;
}

message DeleteTriggerResponse {}

message ArtifactProducer {
  // These can be tasks, and workflows. Keeping track of the launch plans that a given workflow has is purely in
  // Admin's domain.
  core.Identifier entity_id = 1;

  core.VariableMap outputs = 2;
}

message RegisterProducerRequest {
  repeated ArtifactProducer producers = 1;
}

message ArtifactConsumer {
  // These should all be launch plan IDs
  core.Identifier entity_id = 1;

  core.ParameterMap inputs = 2;
}

message RegisterConsumerRequest {
  repeated ArtifactConsumer consumers = 1;
}

message RegisterResponse {}

message ExecutionInputsRequest {
  core.WorkflowExecutionIdentifier execution_id = 1;

  // can make this a map in the future, currently no need.
  repeated core.ArtifactID inputs = 2;
}

message ExecutionInputsResponse {}

service ArtifactRegistry {
  rpc CreateArtifact (CreateArtifactRequest) returns (CreateArtifactResponse) {}

  rpc GetArtifact (GetArtifactRequest) returns (GetArtifactResponse) {
    option (google.api.http) = {
      get: "/data/v1/artifacts"
      additional_bindings {get: "/data/v1/artifact/id/{query.artifact_id.artifact_key.project}/{query.artifact_id.artifact_key.domain}/{query.artifact_id.artifact_key.name}/{query.artifact_id.version}"}
      additional_bindings {get: "/data/v1/artifact/id/{query.artifact_id.artifact_key.project}/{query.artifact_id.artifact_key.domain}/{query.artifact_id.artifact_key.name}"}
      additional_bindings {get: "/data/v1/artifact/tag/{query.artifact_tag.artifact_key.project}/{query.artifact_tag.artifact_key.domain}/{query.artifact_tag.artifact_key.name}"}
    };
  }

  rpc SearchArtifacts (SearchArtifactsRequest) returns (SearchArtifactsResponse) {
    option (google.api.http) = {
      get: "/data/v1/query/s/{artifact_key.project}/{artifact_key.domain}/{artifact_key.name}"
      additional_bindings {get: "/data/v1/query/{artifact_key.project}/{artifact_key.domain}"}
    };
  }

  rpc CreateTrigger (CreateTriggerRequest) returns (CreateTriggerResponse) {}

  rpc DeleteTrigger (DeleteTriggerRequest) returns (DeleteTriggerResponse) {}

  rpc AddTag(AddTagRequest) returns (AddTagResponse) {}

  rpc RegisterProducer(RegisterProducerRequest) returns (RegisterResponse) {}

  rpc RegisterConsumer(RegisterConsumerRequest) returns (RegisterResponse) {}

  rpc SetExecutionInputs(ExecutionInputsRequest) returns (ExecutionInputsResponse) {}

  rpc FindByWorkflowExec (FindByWorkflowExecRequest) returns (SearchArtifactsResponse) {
    option (google.api.http) = {
      get: "/data/v1/query/e/{exec_id.project}/{exec_id.domain}/{exec_id.name}/{direction}"
    };
  }

}
